# jaxnu-osc

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  publish.yml
examples/: atmospheric_oscillogram.py  nsi_sterile.py  oscillograds.py
examples/nuwaves/: README.md  _common.py  adiabatic_sun_ssm.py  matter_constant.py  matter_prem.py  vacuum_2d_pmns.py  vacuum_2flavors.py  vacuum_pmns.py
jaxnu/: __init__.py  constants.py  earth.py  eigensolve.py  hamiltonian.py  layers.py  nsi.py  nufast.py  ode.py  oscillator.py  params.py  pmns.py  propagator.py  solar.py  sterile.py
tests/: test_atmospheric_solar.py  test_backends.py  test_grad.py  test_nsi_sterile.py  test_nufast_reference.py  test_ode.py  test_oscprob_reference.py  test_physics.py
tests/data/: oscprob_earth_cosT-1.txt
validation/: README.md
