[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxnu"
version = "0.1.0"
description = "Differentiable neutrino oscillation calculator in JAX (vacuum, constant density, PREM Earth, atmospheric, solar, NSI, sterile)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pgranger23" }]
keywords = [
    "neutrino", "oscillation", "jax", "differentiable", "PREM",
    "atmospheric", "matter effects", "MSW", "NSI", "sterile neutrino",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["jax>=0.4.20", "numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7"]
examples = ["matplotlib>=3.6"]
diffrax = ["diffrax>=0.5"]  # optional continuous-density ODE backend

[project.urls]
Homepage = "https://github.com/pgranger23/jaxnu-osc"
Repository = "https://github.com/pgranger23/jaxnu-osc"
Issues = "https://github.com/pgranger23/jaxnu-osc/issues"

[tool.setuptools.packages.find]
include = ["jaxnu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
